# oop_additional_tasks

./: .gitignore  pyproject.toml
lesson1/: albums.py  bottle.py  students.py
lesson2/: bankaccount.py  person.py  rectangle.py  user.py
lesson3/: counter.py  fraction.py  logger.py  mylist.py  mylist2.py  point.py  timer.py
lesson4/: animal.py  animal_2.py  car.py  employee.py  employee_2.py  person.py  shape.py
lesson5/: bird.py  cars.py  person.py  student.py
lesson6/: cars.py  employee.py  student.py
src/: article.py  deadline_task.py  periodic_task.py  print_mixin.py  task_iterator.py  tasks.py  user.py  utils.py
tests/: conftest.py  test_deadline_task.py  test_periodic_task.py  test_print_mixin.py  test_tasks.py  test_user.py
